--- a/templates/index.html
+++ b/templates/index.html
@@ -12,12 +12,6 @@
     <div class="flex items-center gap-3 bg-white/20 backdrop-blur p-4 shadow-md rounded-xl
                 max-w-3xl mx-auto mt-4">
 
-        <!-- Logo box -->
-        <div class="w-14 h-14 rounded-lg bg-gradient-to-br from-blue-500 to-cyan-400 
-                    flex items-center justify-center text-3xl font-bold text-blue-900 shadow">
-            C
-        </div>
-
         <!-- Text -->
         <span class="text-2xl font-semibold text-white">ChemistryLab</span>
 
@@ -38,7 +32,7 @@
                Formula
             </a>
 
-            <a href="{{ url_for('periodic_table')}}"
+            <a href="{{ url_for('about')}}"
                class="px-3 py-2 bg-white/20 text-white rounded hover:bg-blue-500 transition">
                About Us
             </a>
